@@ -1,3 +1,11 @@
+2004-08-22  Tor Lillqvist  <tml@iki.fi>
+
+	* gdk/win32/gdkdisplay-win32.c (enum_monitor, gdk_display_open):
+	Report whole of (primary) monitor, including any taskbars.
+	Excluding the taskbar area from the "root window" reported to GDK
+	doesn't seem to be that useful although gdk/win32 had been doing it
+	for a very long time. (#149013, see also #145467 and #148526)
+
 Sun Aug 22 16:55:15 2004  Soeren Sandmann  <sandmann@daimi.au.dk>
 
 	* gtk/gtkexpander.c
